[project]
name = "ml_baselines"
version = "0.0.1"
description = "ML Baselines for greenhouse gases"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}

[project.urls]
"Homepage" = "https://github.com/openghg/ml-baselines"
"Bug Tracker" = "https://github.com/openghg/ml-baselines/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]